# ndl-tools

./: .cvsignore  .hgignore  ChangeLog  FILE_ID.DIZ.in  INSTALL.in  Makefile  Makefile.global  Makefile.global.in  config.h  config.h.in  configure  configure.in  header
ndl-check/: .cvsignore  Makefile  bib-diff.082  bib-diff.089  hub50.082  ndl-check  ndl-check.1  ndl-check.c  ndl-check.h  nodediff.089  nodediff.089.new  nodediff.a89  nodediff.z89  nodelist.075  nodelist.082  nodelist.089
ndl-lib/: Makefile  crc.c  fgets.c  ndllib.h  xstr.c
