dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(ndl-lib/ndllib.h)
AM_CONFIG_HEADER(config.h)
SUBDIRS="ndl-lib ndl-check"
AC_SUBST(SUBDIRS)

dnl General settings for ndl-tools
dnl After changeing the version number, run autoconf!
dnl
PACKAGE="ndl-tools"
VERSION="0.0.1"
COPYRIGHT="Copyright (C) 2007 Michiel Broek, All Rights Reserved"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(COPYRIGHT)
AC_PREFIX_DEFAULT(/usr/local)
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
TARGET="$target"


dnl Checks for programs.
AC_PROG_CC
AC_CHECK_PROG(INSTALL, ginstall, ginstall)
AC_CHECK_PROG(INSTALL, install, install)
AC_CHECK_PROG(MAKE, gmake, gmake)
AC_CHECK_PROG(MAKE, make, make)
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_CHECK_PROG(TAR, tar, tar)
CFLAGS="-O2 -fno-strict-aliasing -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes -D_REENTRANT"

dnl Checks for header files.
AC_HEADER_STDC


AC_OUTPUT(
	Makefile.global
	INSTALL
	FILE_ID.DIZ
)

#=================================================================================

AC_MSG_RESULT([
-=-=-=-=-=-=-=-=-=-= Configuration Complete =-=-=-=-=-=-=-=-=-=-

Configuration summary :

    Version : ..................... ${VERSION}

])

if test x$ac_cv_c_compiler_gnu = xyes ; then
	echo -e "  Tools :\n"
	echo "    Compiler is GCC : ............. ${ac_cv_c_compiler_gnu}"
fi

AC_MSG_RESULT([
  Installation directories :

    Main directory    : ........... ${prefix}

  Now type 'make' and as root 'make install'
])

